	  Add support for nested system calls.  In the current design, this can
	  happen only under one condition:  When the kernel system call logic calls
	  back into user space in order to allocate user space memory.  So it is
	  expected that the maximum nesting level will be only 2 (2013-03-17).
	* libc/stdio/lib_sccanf.c:  Correct an error in sscanf.  If %n occurs in
	  the format statement after the input data stream has been fully
	  parsed, the %n format specifier will not be handled.  Reported by
	  Lorenz Meier (and also earlier by Kate) (2013-03-17).
	* drivers/serial/serial.c:  Support for O_NONBLOCK was not supported
	  in the "upper half" serial driver.  This is normally not an issue
	  because UART TX is almost always available, but it does become an
	  if the UART uses hardware flow control or if the a "lower half" is
	  something like the USB CDC/ACM driver that may need to block for
	  significant amounts of time (2013-03-18).
	* arch/arm/src/armv7-h/ram_vectors.h, up_ramvec_*.c, arch/arm/src/*/*_irq.c,
	  and Make.defs:  Add support for modifiable interrupt vectors in RAM
      (2013-03-18).
	* arch/arm/src/armv7-m/up_exception.S, sam3u/sam3u_vectors.S, and
	  lpc17xx/lpc17_vectors.S: In exception handling with CONFIG_NUTTX_KERNEL,
	  need to explicity set and cleare the privilege bit in the CONTROL
	  register on return.  I assumed this would be handled automatically
	  by the EXC_RETURN.  Silly me (2013-03-18).
	* arch/arm/src/lpc17_adc.c:  Add a work-around for an ADC errata.  From
	  Chris Taglia (2013-93-19).
	* arch/arm/src/armv7-m/up_hardfault.c:  If the PRIMASK is used to disable
	  interrupts, then additional logic is required in the hard fault handler
	  (2013-93-19).
	* libc/ and mm/: Directories where the same sources files are used to
	  build different objects in the first and second pass kernel builds need
	  to keep those objects in separate directories so that they are not
	  constantly rebuilt (2013-93-19).